<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@color/app_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00_00_00"
                android:textSize="18sp"
                android:fontFamily="@font/raleway"
                android:paddingVertical="8dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/btnLocate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_my_location"
                android:paddingVertical="8dp"
                android:background="@color/app_color"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnToggleRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_marginHorizontal="12dp"
                android:backgroundTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnFinishRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_run"
                android:visibility="gone"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_marginHorizontal="12dp"
                android:backgroundTint="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/MapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>